--- a/index.html
+++ b/index.html
@@ -12,7 +12,40 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+        <ul>
+            <li>The head element contains information about the webpage</li>
+            <li>The body element represents the visible content shon to the user</li>
+            <li>Head element contaions metadata</li>
+            <li>Code is rendered as written top to bottom</li>
+            <li>Study Frame</li>
+        </ul>
+      </section>
+
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+        <ul>
+            <li>Adds indiviudal design onto frame</li>
+        </ul>
+      </section>
+
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+        <ul>
+            <li>Repository to save code</li>
+            <li>Version history control</li>
+            <li>git status: checks what branch we are currently on</li>
+            <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+        </ul>
+      </section>
+
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+        <ul>
+            <li>Adds logic for user interaction</li>
+        </ul>
+      </section>
     </main>
 
     <footer>
